@@ -1,3 +1,13 @@
+Mon Jun  9 17:56:30 2008  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/set.rb (Set#delete_if): Call to_a.
+	  (SortedSet#delete_if, TC_SortedSet#test_sortedset): Use super to
+	  yield elements in sorted order; [ruby-core:17144] by Arthur
+	  Schreiber.
+	  (SortedSet#each, SortedSet#each, TC_Set#test_each)
+	  (TC_SortedSet#test_sortedset): Return self; [ruby-dev:35002] by
+	  Arthur Schreiber.
+
 Mon Jun  9 03:28:05 2008  Akinori MUSHA  <knu@iDaemons.org>
 
 	* ext/zlib/zlib.c (rb_deflate_initialize, Init_zlib): Fix up
